# python-project-template

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup_project.py
.github/workflows/: ci.yml  dependency-check.yml  release.yml
src/python_project_template_by_rtj/: __init__.py
