[tool.poetry]
name = "python-project-template-by-rtj"
version = "0.0.1"
description = "Just another Python project template"
authors = ["rrtjr <your-email@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python"]
repository = "https://github.com/rrtjr/python-project-template"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "3.11.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pre-commit = "^3.7.1"
black = "^24.4.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
